sw/source/core/doc/DocumentContentOperationsManager.cxx
@@ -4119,8 +4119,9 @@ void DocumentContentOperationsManager::CopyFlyInFlyImpl(
                     ++aAnchorNdIdx;
                 }
             }
-            // apply found anchor text node as new anchor position
-            newPos.Assign( aAnchorNdIdx );
+            // apply found anchor text node as new anchor position, but keep the content index
+            // unchanged
+            newPos.Assign( aAnchorNdIdx, newPos.GetContentIndex() );
         }
         else
         {
